[gd_scene load_steps=3 format=3 uid="uid://cqh8jm55i8m4p"]

[ext_resource type="Texture2D" uid="uid://bd5uv6rrgeyfp" path="res://scenes/blindfold/blindfold.png" id="1_fosha"]
[ext_resource type="Script" path="res://scenes/blindfold/blindfold.gd" id="1_qe0rd"]

[node name="Blindfold" type="Area2D"]
script = ExtResource("1_qe0rd")

[node name="MouseLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 20.0

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-70, -134, -70, -133, -90, -132, -104.1, -132, -129.2, -128, -136.1, -128, -157.2, -123, -161.2, -123, -173.2, -118, -176.3, -118, -189.3, -110, -191.4, -110, -198.4, -103, -200.5, -103, -206.5, -96, -208, -96, -208, -93.4, -211.5, -89, -212.6, -89, -216.6, -81, -217.7, -81, -223.7, -66, -224.8, -66, -229.8, -44, -230.9, -44, -233.9, -18, -235, -18, -235, 14.1, -231, 29.3, -231, 33.2, -228, 40.1, -228, 44.2, -221, 59.1, -221, 62.3, -214, 74.3, -214, 76.3, -207, 85.3, -207, 87.6, -205, 88.6, -205, 90.5, -202, 92.5, -202, 94.4, -192, 104.4, -192, 106, -189.4, 106, -186, 109.4, -186, 111, -183.4, 111, -181, 113.4, -181, 114.6, -170, 119.6, -170, 120.7, -160, 123.7, -160, 125, -156, 125, -156, 125.9, -138, 127.9, -138, 129, -113, 129, -113, 128, -104.8, 128, -100.8, 126, -94.7, 126, -91.7, 124, -87.8, 124, -76.8, 119, -73.7, 119, -63.7, 113, -61.6, 113, -54.5, 107, -52.6, 107, -46.6, 101, -44.6, 101, -19, 74.4, -17.6, 74, -14, 70.4, -14, 69.6, -4, 65.7, -4, 65, 1, 65, 1, 64, 6.60001, 64, 8.60001, 66, 10.5, 66, 17.6, 72, 19.5, 72, 21.5, 75, 23.6, 75, 27, 78.4, 27, 80, 29.6, 80, 42, 91.4, 42, 93, 44.6, 93, 47, 95.4, 47, 96.6, 51, 98.6, 51, 99.6, 79, 113.6, 79, 114.8, 97, 119.8, 97, 120.9, 105, 121.8, 105, 122.9, 117, 123.9, 117, 125, 139.1, 125, 147.2, 123, 152.3, 123, 155.3, 121, 160.2, 121, 173.2, 115, 175.4, 115, 182.5, 109, 184.5, 109, 186.5, 106, 188.4, 106, 197.4, 97, 199, 97, 199, 94.4, 203.4, 90, 205, 90, 205, 87.4, 206.4, 86, 207.6, 86, 209.6, 82, 210.6, 82, 221.6, 60, 222.8, 60, 225.8, 49, 226.8, 49, 229.8, 33, 230.9, 33, 231.9, 22, 233, 22, 233, 13, 234, 13, 233, -16, 233, -32.1, 231, -39.3, 231, -46.2, 229, -50.2, 229, -55.2, 227, -59.2, 227, -63.3, 224, -68.4, 224, -71.3, 217, -83.4, 217, -85.4, 210, -93.5, 210, -95.5, 205, -99.5, 205, -101.5, 194, -109.6, 194, -110.6, 188, -113.6, 188, -114.7, 180, -117.7, 180, -118.7, 164, -123.8, 164, -124.8, 152, -126.9, 152, -127.9, 127, -130.9, 127, -132, 89, -133, 89, -134)

[node name="Blindfold" type="Sprite2D" parent="."]
texture = ExtResource("1_fosha")

[node name="WinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
